// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeDeprecatedPlugins transforms correctly using "removeDeprecatedPlugins-0" data 1`] = `
"module.exports = {};
"
`;

exports[`removeDeprecatedPlugins transforms correctly using "removeDeprecatedPlugins-1" data 1`] = `
"module.exports = {};
"
`;

exports[`removeDeprecatedPlugins transforms correctly using "removeDeprecatedPlugins-2" data 1`] = `
"module.exports = {
	plugins: [new webpack.optimize.UglifyJsPlugin()]
};
"
`;

exports[`removeDeprecatedPlugins transforms correctly using "removeDeprecatedPlugins-3" data 1`] = `
"// This should throw

module.exports = config => {
	config.plugins.push(new webpack.optimize.UglifyJsPlugin());
	config.plugins.push(new webpack.optimize.DedupePlugin());
	config.plugins.push(new webpack.optimize.OccurrenceOrderPlugin());
	return config;
};
"
`;

exports[`removeDeprecatedPlugins transforms correctly using "removeDeprecatedPlugins-4" data 1`] = `
"// This should throw
const webpack = require(\\"webpack\\");

const inst = new webpack.optimize.OccurrenceOrderPlugin();
module.exports = config => {
	config.plugins = [inst];
	return config;
};
"
`;
